User Data Screen pronta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="welcome">Welcome!</string>
     <string name="your_name">What\'s your name?</string>
     <string name="next">Next</string>
+    <string name="hi" translatable="false">Hi!</string>
+    <string name="male" translatable="false">Male</string>
+    <string name="female" translatable="false">Female</string>
+    <string name="calculate" Calculate="false" translatable="false">Calculate</string>
 </resources>
