BMI Result finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="male" translatable="false">Male</string>
     <string name="female" translatable="false">Female</string>
     <string name="calculate" Calculate="false" translatable="false">Calculate</string>
+    <string name="your_bmi_result" translatable="false">Your BMI Result</string>
+    <string name="bmi_number" translatable="false">30,6</string>
+    <string name="your_class" translatable="false">You have Class | Obesity</string>
+    <string name="age" translatable="false">Age</string>
+    <string name="your_age" translatable="false">50</string>
+    <string name="weight" translatable="false">Weight</string>
+    <string name="your_weight" translatable="false">97 Kg</string>
+    <string name="high" translatable="false">High</string>
+    <string name="your_high" translatable="false">178cm</string>
+    <string name="new_calcule" translatable="false">New Calc</string>
 </resources>
