SharedPreferences HomeScreen e UserDataScreen pronto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="welcome">Welcome!</string>
     <string name="your_name">What\'s your name?</string>
     <string name="next">Next</string>
-    <string name="hi" translatable="false">Hi!</string>
+    <string name="hi" translatable="false">Hi</string>
     <string name="male" translatable="false">Male</string>
     <string name="female" translatable="false">Female</string>
     <string name="calculate" Calculate="false" translatable="false">Calculate</string>
@@ -15,7 +15,7 @@
     <string name="your_age" translatable="false">50</string>
     <string name="weight" translatable="false">Weight</string>
     <string name="your_weight" translatable="false">97 Kg</string>
-    <string name="high" translatable="false">High</string>
-    <string name="your_high" translatable="false">178cm</string>
+    <string name="height" translatable="false">Height</string>
+    <string name="your_height" translatable="false">178cm</string>
     <string name="new_calcule" translatable="false">New Calc</string>
 </resources>
