--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,4 +4,19 @@
     <string name="welcome">Bem-vindo!</string>
     <string name="your_name">Qual é o seu nome?</string>
     <string name="next">Próximo</string>
+    <string name="hi">Hi</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="calculate">Calculate</string>
+    <string name="your_bmi_result">Your BMI Result</string>
+    <string name="bmi_number">30,6</string>
+    <string name="your_class">You have Class | Obesity</string>
+    <string name="age" >Age</string>
+    <string name="your_age" >50</string>
+    <string name="weight" >Weight</string>
+    <string name="your_weight">97 Kg</string>
+    <string name="height" >Height</string>
+    <string name="your_height" >178cm</string>
+    <string name="new_calcule" >New Calc</string>
+    <string name="isError_message">O nome é obrigatório!</string>
 </resources>
