--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,19 @@
     <string name="welcome">Welcome!</string>
     <string name="your_name">What\'s your name?</string>
     <string name="next">Next</string>
-    <string name="hi" translatable="false">Hi</string>
-    <string name="male" translatable="false">Male</string>
-    <string name="female" translatable="false">Female</string>
-    <string name="calculate" Calculate="false" translatable="false">Calculate</string>
-    <string name="your_bmi_result" translatable="false">Your BMI Result</string>
-    <string name="bmi_number" translatable="false">30,6</string>
-    <string name="your_class" translatable="false">You have Class | Obesity</string>
-    <string name="age" translatable="false">Age</string>
-    <string name="your_age" translatable="false">50</string>
-    <string name="weight" translatable="false">Weight</string>
-    <string name="your_weight" translatable="false">97 Kg</string>
-    <string name="height" translatable="false">Height</string>
-    <string name="your_height" translatable="false">178cm</string>
-    <string name="new_calcule" translatable="false">New Calc</string>
+    <string name="hi">Hi</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="calculate">Calculate</string>
+    <string name="your_bmi_result">Your BMI Result</string>
+    <string name="bmi_number">30,6</string>
+    <string name="your_class">You have Class | Obesity</string>
+    <string name="age" >Age</string>
+    <string name="your_age" >50</string>
+    <string name="weight" >Weight</string>
+    <string name="your_weight">97 Kg</string>
+    <string name="height" >Height</string>
+    <string name="your_height" >178cm</string>
+    <string name="new_calcule" >New Calc</string>
+    <string name="isError_message">O nome é obrigatório!</string>
 </resources>
