--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,10 +4,10 @@
     <string name="welcome">Bem-vindo!</string>
     <string name="your_name">Qual é o seu nome?</string>
     <string name="next">Próximo</string>
-    <string name="hi">Hi</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
-    <string name="calculate">Calculate</string>
+    <string name="hi">Olá!</string>
+    <string name="male">Homem</string>
+    <string name="female">Mulher</string>
+    <string name="calculate">Calcular</string>
     <string name="your_bmi_result">Your BMI Result</string>
     <string name="bmi_number">30,6</string>
     <string name="your_class">You have Class | Obesity</string>
@@ -17,6 +17,12 @@
     <string name="your_weight">97 Kg</string>
     <string name="height" >Height</string>
     <string name="your_height" >178cm</string>
-    <string name="new_calcule" >New Calc</string>
+    <string name="new_calcule" >Novo cálculo</string>
     <string name="isError_message">O nome é obrigatório!</string>
+    <string name="obesity_1">Você está com obesidade Classe I!</string>
+    <string name="obesity_2">Você está com obesidade Classe II!</string>
+    <string name="obesity_3">Você está com obesidade Classe III!</string>
+    <string name="under_weight">Atenção, você está abaixo do peso ideal!</string>
+    <string name="normal">Parabéns, seu peso está normal!</string>
+    <string name="over_weight">Atenção, você está um pouco acima do peso ideal!</string>
 </resources>
